Fix the exit btn rendering problem on safari

--- a/Escape_The_Room/css/ETR.css
+++ b/Escape_The_Room/css/ETR.css
@@ -16,15 +16,6 @@
 #red{
     color:red;
 }
-.quit{
-    display:none;
-    z-index: -5;
-    margin:auto;
-    position: fixed;
-    top: 50%;
-
-}
-
 .unblur{
 	background: url("../images/back.png") no-repeat center center;
 	background-attachment: fixed;
@@ -82,6 +73,16 @@ body {
     font-size: 20px;
     font-family: 'Titillium Web', sans-serif;
     color: white;
+}
+
+.quit{
+    display:none;
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    z-index: -5;
+    position: fixed;
+    top: 50%;
+    left: 50%;
 }
 
 /*Screen*/
